...
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <in.koreatech.koin.core.appbar.AppBarBase
                android:id="@+id/koin_base_app_bar_dark"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/article_scrollview"
                android:layout_alignParentTop="true"
                app:leftButtonBackground="@drawable/ic_back_arrow"
                app:rightButtonBackground="@drawable/ic_create" />
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/article_edittext_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17.5dp"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/article_edittext_password" />


                <in.koreatech.koin.ui.board.KoinRichEditor
                    android:id="@+id/article_editor_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
...
